syntax = "proto3";

option java_package = "com.example.grpc.demo.lib";
option java_outer_classname = "GrpcHelloProto";

// The greeter service definition.
service HelloProto {
    // Sends a greeting
    rpc SayHello ( HelloRequest) returns (  HelloReply) {}

}
// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}
// The response message containing the greetings
message HelloReply {
    string message = 1;
}


service QueryWorkflowInfo {
    rpc QueryWorkflow (QueryRequest) returns (QueryResponse) {}
}

message QueryRequest {
    string requestId = 2;
}

message QueryResponse {
    string workflowId = 1;
    string workflowName =2;
}